<resources>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main" translatable="false">Main</string>
    <string name="barcode_header" translatable="false">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode" translatable="false">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash" translatable="false">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="BarcodeReadFailed">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_main_menu" translatable="false">MainMenu</string>
    <string name="title_activity_login_screen">Login</string>
    <string name="sendOrder">Submit order</string>
    <string name="AddOrder">Make an order</string>
    <string name="order_discountOnOrder">Order discount</string>
    <string name="discount">Discount</string>
    <string name="pastOrders">Past orders</string>
    <string name="AddProduct">Add a product</string>
    <string name="AddCustomer">Add Customer</string>
    <string name="submitOrder">Submit order</string>
    <string name="productName">Product name</string>
    <string name="productPrice">Product price</string>
    <string name="barcode">Barcode</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="post">Post</string>
    <string name="DDV">VAT ID</string>
    <string name="scanProducts">Scan products</string>
    <string name="warehouse_productLink">Scan product</string>
    <string name="inventory">Inventory</string>
    <string name="customerName" translatable="false">CustomerName</string>
    <string name="customerSurname" translatable="false">CustomerSurname</string>
    <string name="customerAddress" translatable="false">CustomerAddress</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_resetpassword">Password reset</string>
    <string name="firmName">firmName</string>
    <string name="end">Finish</string>
    <string name="firmname">Firma</string>
    <string name="Clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="signature">Signature</string>
    <string name="shipping">Shipping</string>
    <string name="paid">Paid</string>
    <string name="inputNumProd">Number of products</string>
    <string name="newProduct">New product</string>
    <string name="newCustomer">New customer</string>
    <string name="menu">Menu</string>
    <string name="appname">InventoryTracker</string>
    <string name="customerID" translatable="false">CustomerID</string>
    <string name="description" translatable="false"> Track your inventory and make orders from Firebase.</string>
    <string name="sent_post">Sent by post</string>
    <string name="personal_pickup">Personal pickup</string>
    <string name="next">Next</string>
    <string name="izberite_na_in_prevzema_blaga">Choose a pickup method</string>
    <string name="inputdialog_instructions">Add discount as integer or decimal</string>
    <string name="fcm_token" translatable="false">FCM Token: %s</string>
    <string name="status" translatable="false">Status</string>
    <string name="date">Date</string>
    <string name="Customer">Customer</string>
    <string name="ime">Customer name</string>
    <string name="priimek">Customer surname</string>
    <string name="naziv_firme">Company name</string>
    <string name="naslov">Customer Address</string>
    <string name="taskTitle">Title</string>
    <string name="priority">Priority</string>
    <string name="Add">Add</string>
    <string name="seller">Seller</string>
    <string name="settings">Settings</string>
    <string name="taskContent">Content</string>
    <string name="productList">"Product list "</string>
    <string name="reminder">Reminder</string>
    <string name="tasks">Manage tasks</string>
    <string name="Bestsellers">Best selling items</string>
    <string name="bestcustomers">Best customers</string>
    <string name="consignment">Consignment</string>
    <string name="consignment_text">Choose any of below:</string>
    <string name="consignment_make">Make new consignment order</string>
    <string name="consignment_close">Close a consignment order</string>
    <string name="consignment_productssold">Number of sold products</string>
    <string name="packaging_update">Update package info</string>
    <string name="packaging_stock">Update stock</string>
    <string name="packaging_rescan">Scan</string>
    <string name="packaging_productInput">Number of products</string>
    <string name="packaging_received">Number of received packages</string>
    <string name="packaging_packBarcode">Package barcode</string>
    <string name="packaging_prodBarcode">Product barcode</string>
    <string name="packaging_numberOfProductsInPKG">Number of products in a package</string>
    <string name="packaging_weight">Weight</string>
    <string name="packaging_height">Height</string>
    <string name="packaging_depth">Depth</string>
    <string name="packaging_width">Width</string>
    <string name="discount_type">Discount type</string>
    <string name="discount_percentage">Discount in percents</string>
    <string name="discount_startDate">Begin date</string>
    <string name="discount_endDate">End date</string>
    <string name="discount_isActive">Discount validity</string>
    <string name="discount_makediscount">Nov popust(standard)</string>
    <string name="discount_product">Discount product link</string>
    <string name="discount_customer">Discount customer link</string>
    <string name="discount_update">Manage discounts</string>
    <string name="discount_context">"Choose action: "</string>
    <string name="discount_newdiscount">Add discount</string>
    <string name="productInfo_orderDiscountSwitch">Order discount</string>
    <string name="productInfo_productDiscountSwitch">Product discount</string>
    <string name="product_productstock">Product stock</string>
    <string name="value">Value</string>
    <string name="package_orderReception">Supplier order report</string>
    <string name="package_onepackage">Single package</string>
    <string name="package_createUpdatePackage">Update or create a package</string>
    <string name="package_actiontext">Choose one option:</string>
    <string name="package_productstotal">Number of products total: %d</string>
    <string name="package_packagecontent">Package</string>
    <string name="packaging_scanpackage">Scan pkg.</string>
    <string name="tools_choosetext">"Choose a tool: "</string>
    <string name="tools_marginCalculator">Margin calculator</string>
    <string name="tools_discountCalculator">Discount calculator</string>
    <string name="tools_calculate">Calculate</string>
    <string name="tools_output">Output</string>
    <string name="tools_priceInput">Price without VAT</string>
    <string name="VAT22">VAT 22%</string>
    <string name="VAT95">VAT 9.5%</string>
    <string name="discountCalc_discountInput">"Discount input "</string>
    <string name="marginCalc_marginInput">Margin percentage input</string>
    <string name="marginCalc_targetPrice">Target price</string>
    <string name="orderDiscount_context">Add or choose a discount</string>
    <string name="supplierName">Supplier Name</string>
    <string name="supplierCountry">Country</string>
    <string name="Address">Address</string>
    <string name="NoItemsToDisplay">No items to display</string>
    <string name="Welcome">Welcome</string>
    <string name="Updated">Updated</string>
    <string name="UpdateError">Error while updating entry</string>
    <string name="LoginError">Error while logging in</string>
    <string name="ResetPasswordEmail">Email with reset link sent</string>
    <string name="Error">Error</string>
    <string name="InvalidData">Invalid data input</string>
    <string name="SomethingWentWrong">Something went wrong</string>
    <string name="DatabaseError">Error while inserting entry</string>
    <string name="Product">Product</string>
    <string name="ProductDiscount">Product discount</string>
    <string name="ProductAdded">Product added</string>
    <string name="StockUpdated">Stock updated</string>
    <string name="NotInStock">Product not in stock</string>
    <string name="ProductUnavailable">Product doesn\'t exist</string>
    <string name="ProductRemoved">Product removed from cart</string>
    <string name="PleaseRescan">Please rescan</string>
    <string name="PacketDoesntExist">Packet doesnt exist</string>
    <string name="Sold">Sold</string>
    <string name="Order">Order</string>
    <string name="Ordered">Ordered</string>
    <string name="Quantity">Quantity</string>
    <string name="OrderSubmitted">Order was submitted</string>
    <string name="Signature_URL">Signature link</string>
    <string name="Signature_PostOffice">Signature at the post</string>
    <string name="PickupMethod">Pickup method</string>
    <string name="Pickup_personal">Personal pickup</string>
    <string name="Pickup_Post">Sent by post</string>
    <string name="CustomerDiscount">Customer discount</string>
    <string name="CustomerAlreadyExists">Customer already exists</string>
    <string name="CustomerAdded">Customer added</string>
    <string name="Discount">Discount</string>
    <string name="StandardDiscount">Standard discount</string>
    <string name="CategoryDiscount">Category discount</string>
    <string name="NoDiscountReferences">Discount references weren\'t found</string>
    <string name="TypeIsNotANumber">Input is not a number</string>
    <string name="InvalidDiscount">Invalid discount</string>
    <string name="ActiveDiscount">Active discount</string>
    <string name="InactiveDiscount">Inactive discount</string>
    <string name="DiscountAdded">Discount added</string>
    <string name="InvalidStartDate">Start date is invalid</string>
    <string name="InvalidEndDate">End date is invalid</string>
    <string name="InvalidPriceOrVAT">Price or VAT is invalid</string>
    <string name="Margin">Price calculated with margin:</string>
    <string name="TargetPrice">Margin based on target price</string>
    <string name="TaskAdded">Task added</string>
    <string name="TitleNeeded">Title is required</string>
    <string name="TooLittleChars">Not sufficient amount of characters</string>
    <string name="InvalidPriority">Undefined priority</string>
    <string name="ConsignmentClosingError">Error while closing a consignment</string>
    <string name="ConsignmentClosed">Consignment closed</string>
    <string name="ReportMade">Report was made</string>
    <string name="PackageMade">Package made</string>
    <string name="OrderTotal">Total: %.2f €</string>
    <string name="AddDiscount">Add discount</string>
    <string name="Back">Back</string>
    <string name="VAT">VAT</string>
    <string name="Submit">Submit</string>
    <string name="ProductInfoName">Naziv izdelka: %s</string>
    <string name="ProductStock">Product stock: %d</string>
    <string name="ProductSKU">Product SKU: %s</string>
    <string name="ProductPrice">Product price: %.2f €</string>
    <string name="IsPackage">Scanned product is a package</string>
    <string name="PackagesReceived">Packages received: %d</string>
    <string name="week">Week</string>
</resources>